--- a/client/app/flight/flightTracking.html
+++ b/client/app/flight/flightTracking.html
@@ -50,7 +50,10 @@
                                 <th>Remote</th>
                                 <th>Flight Type</th>
                                 <th>Air Craft Type</th>
-                                <th>Flight Time</th>
+                                <!-- <th>Flight Time</th> -->
+                                <th>Departure Time</th>
+                                <th>Arrival Time</th>
+                                <th>Tail No</th>
                             </tr>
                         </thead>
                     </table>
